@@ -1,3 +1,8 @@
+2013-01-07  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* libstdc++-raw-cxx.m4 (GCC_LIBSTDCXX_RAW_CXX_FLAGS): Remove
+	"-I" from LIBSTDCXX_RAW_CXX_LDFLAGS.
+
 2012-12-12  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* libstdc++-raw-cxx.m4 (GCC_LIBSTDCXX_RAW_CXX_FLAGS): Also
